Increased code quality